--- a/lib-common/pom.xml
+++ b/lib-common/pom.xml
@@ -96,6 +96,11 @@
             <version>0.12.5</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+
+        </dependency>
     </dependencies>
 
 </project>
