--- a/resource-management/resource-management-dao/src/main/resources/application-prod.properties
+++ b/resource-management/resource-management-dao/src/main/resources/application-prod.properties
@@ -23,3 +23,9 @@ spring.datasource.hikari.maximum-pool-size=10000
 spring.datasource.hikari.minimum-idle= 10
 spring.datasource.hikari.idle-timeout= 120000
 spring.datasource.hikari.connectionTimeout= 5000
+
+
+spring.rabbitmq.host = localhost
+spring.rabbitmq.port = 5672
+spring.rabbitmq.username = guest
+spring.rabbitmq.password = guest
