--- a/resource-management/resource-management-all/src/main/resources/application.properties
+++ b/resource-management/resource-management-all/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.profiles.active=dev
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
 logging.level.org.springframework.security=DEBUG
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 #CloudFront
 #cloudfront.domain=https://yourdistribution.cloudfront.net
 #cloudfront.keyPairId=YOUR_KEY_PAIR_ID
