--- a/resource-management/resource-management-service/pom.xml
+++ b/resource-management/resource-management-service/pom.xml
@@ -18,6 +18,17 @@
             <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk18on -->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk18on</artifactId>
+            <version>1.78.1</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>cloudfront</artifactId>
+            <version>2.29.15</version>
+        </dependency>
     </dependencies>
 
     <properties>
