--- a/resource-management/resource-management-all/src/main/resources/application.properties
+++ b/resource-management/resource-management-all/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.servlet.multipart.max-request-size=10MB
 #cloudfront.keyPairId=YOUR_KEY_PAIR_ID
 #cloudfront.privateKeyPath=classpath:private-key.pem  # Ensure the private key file is in the classpath
 
-cloudfront.domain=https://yourdistribution.cloudfront.net
-cloudfront.keyPairId=YOUR_KEY_PAIR_ID
-cloudfront.privateKeyPath=classpath:private-key.pem  # Ensure the private key file is in the classpath
+#AWS s3
+aws.s3.bucketName= YourBucketName
+aws.s3.accessKey=YOUR_ACCESS_KEY
+aws.s3.secretKey=YOUR_SECRET_KEY
