--- a/resource-management/resource-management-service/pom.xml
+++ b/resource-management/resource-management-service/pom.xml
@@ -29,6 +29,20 @@
             <artifactId>cloudfront</artifactId>
             <version>2.29.15</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/s3 -->
+<!--        <dependency>-->
+<!--            <groupId>software.amazon.awssdk</groupId>-->
+<!--            <artifactId>s3</artifactId>-->
+<!--            <version>2.29.39</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.29.39</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
     <properties>
